# doomed

./: README.md  pyproject.toml
doomed/: __init__.py  __main__.py  logger.py
doomed/commands/: init_mod.py
